<resources>
    <string name="app_name">Picture Of The Day</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Search in Wikipedia</string>
    <string name="wiki_helper_text">Search the word in Wikipedia</string>
    <string name="favourite">favourite</string>
    <string name="settings">settings</string>
    <string name="search">Search</string>
    <string name="load_from_day_text_view">Load from day:</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="two_days_ago">2 days ago</string>
    <string name="select_theme_text_view">Select application theme</string>
    <string name="mars_theme">Marsian theme</string>
    <string name="moon_theme">Moon theme</string>
    <string name="earth_theme">Earth theme</string>
</resources>