<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/settings_top_margin"
        android:text="@string/select_theme_text_view" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/settings_chip_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        app:checkedChip="@id/marsian_theme_chip"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/marsian_theme_chip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mars_theme"
            app:shapeAppearance="@style/ChipsShapeAppearance" />

        <com.google.android.material.chip.Chip
            android:id="@+id/moon_theme_chip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moon_theme"
            app:shapeAppearance="@style/ChipsShapeAppearance" />

        <com.google.android.material.chip.Chip
            android:id="@+id/earth_theme_chip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/earth_theme"
            app:shapeAppearance="@style/ChipsShapeAppearance" />

    </com.google.android.material.chip.ChipGroup>
</LinearLayout>
