<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:paddingEnd="@dimen/constraint_padding"
    android:paddingStart="@dimen/constraint_padding">

    <TextView
        android:id="@+id/chips_text_view"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:text="@string/load_from_day_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_height="0dp"
        android:layout_width="wrap_content"
        app:checkedChip="@id/today_chip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chips_text_view"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:id="@+id/two_days_ago_chip"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/two_days_ago"
            app:shapeAppearance="@style/ChipsShapeAppearance" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:id="@+id/yesterday_chip"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/yesterday"
            app:shapeAppearance="@style/ChipsShapeAppearance" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:id="@+id/today_chip"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/today"
            app:shapeAppearance="@style/ChipsShapeAppearance" />
    </com.google.android.material.chip.ChipGroup>

    <ru.varasoft.pictureoftheday.view.EquilateralImageView
        android:contentDescription="@string/photo_of_the_day_stub"
        android:id="@+id/image_view"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chip_group"
        app:srcCompat="@drawable/ic_no_photo_vector" />
</androidx.constraintlayout.widget.ConstraintLayout>
